<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/verification_needed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verification_needed_textView" />
</LinearLayout>