...
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:text="@string/address_label"/>

                <EditText
                    android:id="@+id/address"
                    android:layout_weight="1"
                    />

            </TableRow>
            <TableRow>
                <TextView
...
        </TableLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button_label"
            android:layout_marginTop="20dp"
            android:id="@+id/search_submit_button"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filter"
            android:layout_marginTop="20dp"
...
